<?xml version="1.0"?>
<package>
  <name>imi_camera</name>
  <version>0.0.1</version>
  <description>Drivers for Imi Devices. </description>
  <author email="chenshangwei@hjimi.com">hjimi</author>
  <license>BSD</license>

  <maintainer email="chenshangwei@hjimi.com">hjimi</maintainer>
  
  <url>http://wiki.ros.org/imi_camera</url>
  <author>HUAJIEIMI</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>git</build_depend>
  <build_depend>libudev-dev</build_depend>
  <build_depend>libusb-1.0-dev</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>nodelet</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <nodelet plugin="${prefix}/imi_nodelets.xml"/>
  </export>
</package>
